Assets/style.css
:root {
    --dark-background: #00171F;
    --white-text: #FFF;
    --nav: #10128f;
    --button-text: #FFF;
    --button: #252233;
    --gradient0: #3177B8;
    --gradient51: #1AA7DA;
    --gradient100: #01DBFF;
    /* set 1rem to 10px instead of native 16px to make it easier to calculate font-size values for the rest of the page (e.g. 1.6rem is 16px, 2.0rem is 20px, etc.) */
    font-size: 62.5%;
}

h2 {
    font-size: 4rem;
}

h3 {
    font-size: 3rem;
}

figcaption,
article {
    font-size: 2.5rem;
}


/*Hyperlink formatting*/
a:link {
    text-decoration: none;
    color: var(--gradient0);
}

a:visited {
    text-decoration: none;
    color: var(--gradient0);
}

a:hover {
    text-decoration: none;
}

a:active {
    text-decoration: none;
}

* {
    /* box-sizing accounts for the border and padding along with the content size when defining and item's height and width. */
    box-sizing: border-box;
    font-family: sans-serif;
    margin: 5px;
    padding: 5px;
}

.container {
    display: flex;
    flex-direction: column;
}

/*Nav Bar formatting*/
/*This CSS applies to both the header/nav and the footer since they both have ul tags!!!*/
ul {
    /*By having the ul box be displayed to flex and the flex-direction set to row, the li contents inside are no longer a column but are now a row.*/
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    text-align: center;

}

/*This CSS applies to both the header/nav and the footer since they both have li tags!!!*/
li {
    /*This gets rid of the bullet/circles that you see in unordered lists*/
    list-style: none;
    font-size: 2.5rem;
}


/*Home Section formatting*/
@keyframes home {

    /*Starts the text "Hi, my name is Claire. Nice to meet you!" text off screen to the left before you load.*/
    0% {
        transform: translateX(-100%);
    }

    /*Has the text "Hi, my name is Claire. Nice to meet you!" text on screen by the end (100%) of the animation.*/
    100% {
        transform: translateX(0);
    }
}

#home {
    padding: 150px 50px;
    display: flex;
    justify-content: center;
    text-align: center;
    /*1.5s is the keyframes duration, "ease-in" is a type of easing function, followed by the delay (in this case we don't want a delay so it's 0s, 1 dictates the amount of times to play the animation (aka animation-iteration-count), and finally home is the name of the play-state. */
    /*This determines how long the animation is and how it shows up. In this case, the animation will run once as the page loads, for 1.5 seconds, with the text easing in.*/
    animation: 1.5s ease-in 0s 1 home;
    font-size: 4rem;
}


/*About Me Section Formatting*/
#about {
    background-color: var(--dark-background);
    color: var(--white-text);
    /* This sets up the grid system for the About Me section. It will include the header (#about-header), introductory article (#intro), and the profile picture (#me). */
    display: grid;
    padding: 3rem;
    width: 100%;
    grid-template-columns: 4fr 1fr;
    grid-template-rows: .2fr 1fr;
    grid-gap: 0.2rem;
    align-items: center;
}

#about-header {
    /* This makes the About Me section header start at row 1, column 1 and have it span for 1 row and 2 columns. */
    grid-area: 1 / 1 / span 1 / span 2;
    text-align: center;
}

#intro {
    /* This makes the About Me section article start at row 2, column 1 and have it span for 1 row and 1 column. */
    grid-area: 2 / 1 / span 1 / span 1;
    font-size: 2rem;
    line-height: 2;
    padding: 2rem;
}

#me {
    /* This makes the About Me section article start at row 2, column 2 and have it span for 1 row and 1 column. */
    grid-area: 2 / 2 / span 1 / span 1;
    display: flex;
    justify-content: center;
    text-align: center;
    align-items: center;
    justify-self: center;
}

/*About me section for Phones - make it a column with header, picture, then article.*/
@media screen and (max-width: 768px) {
    #about {
        /* This sets up the grid system for the About Me section on phones (or other devices smaller than 768px). It will include the header (#about-header), introductory article (#intro), and the profile picture (#me). */
        display: grid;
        width: 100%;
        grid-template-columns: 1fr;
        grid-template-rows: auto;
        grid-gap: 0.2rem;
        align-items: center;
    }

    #about-header {
        /* This makes the About Me section header start at row 1, column 1 and have it span for 1 row and 1 columns. */
        grid-area: 1 / 1 / span 1 / span 1;
        text-align: center;
    }

    #intro {
        /* This makes the About Me section article start at row 3, column 1 and have it span for 1 row and 1 column. */
        grid-area: 3 / 1 / span 1 / span 1;
        font-size: 2rem;
        line-height: 2;
        padding: 2rem;
    }

    #me {
        /* This makes the About Me section article start at row 2, column 1 and have it span for 1 row and 1 column. */
        grid-area: 2 / 1 / span 1 / span 1;
        display: flex;
        justify-content: center;
        text-align: center;
        align-items: center;
        justify-self: center;
    }

}

/*Projects Section Formatting*/
/*This section deals with the visual appearance of all buttons.*/
button {
    /* width: 150px; */
    color: var(--button-text);
    background-image: linear-gradient(to right, var(--gradient0) 0%, var(--gradient51) 51%, var(--gradient100) 100%);
    border: var(--button);
    border-radius: 10px;
    padding: 10px 20px;
    margin: 10px;
    flex-grow: 1;
    /*Gets rid of underline when I anchor links to the button*/
    text-decoration: none;
    font-size: 2.5rem;
}

button:hover,
button:focus {
    background-position: right center;
    cursor: pointer;
}

/*This section deals with the images in the Projects section*/
.thumbnail {
    max-width: 100%;
    height: auto;
}

.coming-soon {
    max-width: 100%;
    height: auto;
}

/*This section deals with the grid-system for the project cards.*/
#projects {
    display: flex;
    flex-direction: column;
}

#project-header {
    text-align: center;
}

#first {
    display: flex;
    /* Sets contents to be stacked in a column rather than the default row orientation. */
    flex-direction: column;
    /* Sets contents (h3 header, figure [including img], and buttons) to the center along the main (in this case, since we set the flex-direction to column, vertical) axis of the "first" project box */
    justify-content: center;
    /* Sets contents (h3, figure [including img], and buttons) from the default left margin to the center along the horizontal axis.*/
    text-align: center;
    border: var(--dark-background) solid;
    border-radius: 10px;
}

/*This affects the project cards below the first one (Projects 2-5).*/
#other-projects>* {
    border: var(--dark-background) solid;
    border-radius: 10px;
}

/*Desktop layout*/
@media screen and (min-width: 992px) {
    #other-projects {
        /*This establishes a grid system for the projects below the first one with 4 columns on screens with 768px to 992 px width. The rows will automatically form.*/
        display: grid;
        grid-template-columns: 1fr 1fr 1fr 1fr;
        gap: 0.2rem;
        /* flex-shrink: 1; */
    }

    #second {
        /* This makes project 2 start on row 1 and column 1, and take up/span 1 row and 1 column. */
        grid-area: 1 / 1 / span 1 / span 1;
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
    }

    #third {
        /* This makes project 3 start on row 1 and column 2, and take up/span 1 row and 1 column. */
        grid-area: 1 / 2 / span 1 / span 1;
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
    }


    #fourth {
        /* This makes project 4 start on row 1 and column 3, and take up/span 1 row and 1 column. */
        grid-area: 1 / 3 / span 1 / span 1;
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
    }

    #fifth {
        /* This makes project 5 start on row 1 and column 4, and take up/span 1 row and 1 column. */
        grid-area: 1 / 4 / span 1 / span 1;
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
    }
}


/*Tablet layout*/
@media screen and (min-width: 768px) and (max-width: 992px) {
    #other-projects {
        /*This establishes a grid system for the projects below the first one with 2 columns on screens with 768px to 992 px width. The rows will automatically form.*/
        display: grid;
        grid-template-columns: 1fr 1fr;
        gap: 0.2rem;
    }

    #second {
        /* This makes project 2 start on row 1 and column 1, and take up/span 1 row and 1 column. */
        grid-area: 1 / 1 / span 1 / span 1;
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
    }

    #third {
        /* This makes project 3 start on row 1 and column 2, and take up/span 1 row and 1 column. */
        grid-area: 1 / 2 / span 1 / span 1;
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
    }


    #fourth {
        /* This makes project 4 start on row 2 and column 1, and take up/span 1 row and 1 column. */
        grid-area: 2 / 1 / span 1 / span 1;
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
    }

    #fifth {
        /* This makes project 5 start on row 2 and column 2, and take up/span 1 row and 1 column. */
        grid-area: 2 / 2 / span 1 / span 1;
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
    }
}

/*Phone layout*/
@media screen and (max-width: 768px) {
    #other-projects {
        /*This establishes a grid system for the projects below the first one, with 1 column on screens with 768px width or less. The rows will automatically form.*/
        display: grid;
        grid-template-columns: 1fr;
        gap: 0.2rem;
    }

    #second {
        /* This makes project 5 start on row 1 and column 1, and take up/span 1 row and 1 column. */
        grid-area: 1 / 1 / span 1 / span 1;
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
    }

    #third {
        /* This makes project 5 start on row 2 and column 1, and take up/span 1 row and 1 column. */
        grid-area: 2 / 1 / span 1 / span 1;
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
    }


    #fourth {
        /* This makes project 5 start on row 3 and column 1, and take up/span 1 row and 1 column. */
        grid-area: 3 / 1 / span 1 / span 1;
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
    }

    #fifth {
        /* This makes project 5 start on row 4 and column 1, and take up/span 1 row and 1 column. */
        grid-area: 4 / 1 / span 1 / span 1;
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
    }
}

/*Contact Me Section Formatting*/
#contact {
    background-color: var(--dark-background);
    color: var(--white-text);
}

#contact-header {
    text-align: center;
}

#contact>ul>li {
    color: var(--white-text)
}

/*Contact Me Section Responsiveness - Tablets and phones*/
@media screen and (max-width: 992px) {

    /*This changes the Contact Me section from a row to a column, with the text aligned to the left rather than in the center.*/
    #contact>ul {
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: left;
    }

    .links {
        display: flex;
    }
}

